# Serverless-ImageProcessing

./: README.md  cdk.json  package-lock.json  package.json
.github/workflows/: ci.yml
functions/image-processing/: Cargo.toml  Dockerfile
functions/image-processing/events/: request.json
functions/image-processing/src/: error.rs  handlers.rs  lib.rs  main.rs  manipulate_image.rs  process_image.rs
functions/image-processing/src/api/: get_image_endpoint.rs  mod.rs  post_image_endpoint.rs  response_image.rs
functions/image-processing/src/common/: image_handler.rs  mod.rs  models.rs  types.rs
functions/image-processing/src/utils/: base64_image.rs  get_base64_image.rs  lambda_helper.rs  mod.rs
lib/: RestApiKey.ts  image-processing-stack.ts
