[package]
name = "image-processing"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.6"
lambda_http = "0.8.1"
lambda_runtime = "0.8.1"
mime = "0.3.17"
# reqwest = { version = "0.11.18", features = ["rustls"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
serde_qs = "0.12.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }